--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "vite": "^6.3.5"
   },
   "dependencies": {
-    "animejs": "^4.0.2",
-    "gsap": "^3.13.0"
+    "gsap": "^3.13.0",
+    "vanilla-tilt": "^1.8.1"
   }
 }
